--- a/weather.html
+++ b/weather.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weather</title>
-        <link rel="stylesheet" href="weather.css">
+        <link rel="stylesheet" href="./assets/css/weather.css">
     </head>
     <body>
-        <h1>Weather Dashboard</h1>
+        <h1>Weather</h1>
         <div class="container">
             <h3>Enter a City Name</h3>
             <input class="city-input" type="text" placeholder="E.g., New York, London, Tokyo">
