--- a/weather.html
+++ b/weather.html
@@ -9,55 +9,57 @@
     <body>
         <h1>Weather</h1>
         <div class="container">
-            <h3>Enter a City Name</h3>
-            <input class="city-input" type="text" placeholder="E.g., New York, London, Tokyo">
-            <button class="search-btn">Search</button>
-            <div class="separator"></div>
-            <button class="location-btn">Use Current Location</button>
-        </div>
-        <div class="weather-data">
-            <div class="current-weather">
-                <div class="details">
-                    <h2>________ ( ____ )</h2>
-                    <h4>Temperature: __℃</h4>
-                    <h4>Wind: __M/S</h4>
-                    <h4>Humidity: __%</h4>                  
-                </div>
+            <div class="weather-input">
+                <h3>Enter a City Name</h3>
+                <input class="city-input" type="text" placeholder="...">
+                <button class="search-btn">Search</button>
+                <div class="separator"></div>
+                <button class="location-btn">Use Current Location</button>
             </div>
-            <div class="days-forecast">
-                <h2>5-Day Forecast</h2>
-                <ul class="weather-cards">
-                    <li class="card">
-                        <h3>( ____ )</h3>
-                        <h4>Temp: __℃</h4>
+            <div class="weather-data">
+                <div class="current-weather">
+                    <div class="details">
+                        <h2>________ ( ____ )</h2>
+                        <h4>Temperature: __℃</h4>
                         <h4>Wind: __M/S</h4>
-                        <h4>Humidity: __%</h4>  
-                    </li>
-                    <li class="card">
-                        <h3>( ____ )</h3>
-                        <h4>Temp: __℃</h4>
-                        <h4>Wind: __M/S</h4>
-                        <h4>Humidity: __%</h4>  
-                    </li>
-                    <li class="card">
-                        <h3>( ____ )</h3>
-                        <h4>Temp: __℃</h4>
-                        <h4>Wind: __M/S</h4>
-                        <h4>Humidity: __%</h4>  
-                    </li>
-                    <li class="card">
-                        <h3>( ____ )</h3>
-                        <h4>Temp: __℃</h4>
-                        <h4>Wind: __M/S</h4>
-                        <h4>Humidity: __%</h4>  
-                    </li>
-                    <li class="card">
-                        <h3>( ____ )</h3>
-                        <h4>Temp: __℃</h4>
-                        <h4>Wind: __M/S</h4>
-                        <h4>Humidity: __%</h4>  
-                    </li>
-                </ul>
+                        <h4>Humidity: __%</h4>                  
+                    </div>
+                </div>
+                <div class="days-forecast">
+                    <h2>5-Day Forecast</h2>
+                    <ul class="weather-cards">
+                        <li class="card">
+                            <h3>( ____ )</h3>
+                            <h4>Temp: __℃</h4>
+                            <h4>Wind: __M/S</h4>
+                            <h4>Humidity: __%</h4>  
+                        </li>
+                        <li class="card">
+                            <h3>( ____ )</h3>
+                            <h4>Temp: __℃</h4>
+                            <h4>Wind: __M/S</h4>
+                            <h4>Humidity: __%</h4>  
+                        </li>
+                        <li class="card">
+                            <h3>( ____ )</h3>
+                            <h4>Temp: __℃</h4>
+                            <h4>Wind: __M/S</h4>
+                            <h4>Humidity: __%</h4>  
+                        </li>
+                        <li class="card">
+                            <h3>( ____ )</h3>
+                            <h4>Temp: __℃</h4>
+                            <h4>Wind: __M/S</h4>
+                            <h4>Humidity: __%</h4>  
+                        </li>
+                        <li class="card">
+                            <h3>( ____ )</h3>
+                            <h4>Temp: __℃</h4>
+                            <h4>Wind: __M/S</h4>
+                            <h4>Humidity: __%</h4>  
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <script src="weather.js" defer></script>
