--- a/weather.html
+++ b/weather.html
@@ -13,7 +13,6 @@
                 <h3>Enter a City Name</h3>
                 <input class="city-input" type="text" placeholder="...">
                 <button class="search-btn">Search</button>
-                <div class="separator"></div>
                 <button class="location-btn">Use Current Location</button>
             </div>
             <div class="weather-data">
@@ -26,7 +25,7 @@
                     </div>
                 </div>
                 <div class="days-forecast">
-                    <h2>5-Day Forecast</h2>
+                    <h2>5 Day Forecast</h2>
                     <ul class="weather-cards">
                         <li class="card">
                             <h3>( ____ )</h3>
