--- a/weather.html
+++ b/weather.html
@@ -18,7 +18,7 @@
             <div class="weather-data">
                 <div class="current-weather">
                     <div class="icon">                   
-                        <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 200px" alt="weather-icon">
+                        <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                     </div> 
                     <div class="details">
                         <h2>________ ( ____ )</h2>
@@ -31,35 +31,35 @@
                     <h2>5 Day Forecast</h2>
                     <ul class="weather-cards">
                         <li class="card">                  
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 130px" alt="weather-icon">
+                            <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                             <h3>( ____ )</h3>
                             <h4>Temp: __℃</h4>
                             <h4>Wind: __M/S</h4>
                             <h4>Humidity: __%</h4>  
                         </li>
                         <li class="card">
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 130px" alt="weather-icon">
+                            <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                             <h3>( ____ )</h3>
                             <h4>Temp: __℃</h4>
                             <h4>Wind: __M/S</h4>
                             <h4>Humidity: __%</h4>  
                         </li>
                         <li class="card">
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 130px" alt="weather-icon">
+                            <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                             <h3>( ____ )</h3>
                             <h4>Temp: __℃</h4>
                             <h4>Wind: __M/S</h4>
                             <h4>Humidity: __%</h4>  
                         </li>
                         <li class="card">
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 130px" alt="weather-icon">
+                            <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                             <h3>( ____ )</h3>
                             <h4>Temp: __℃</h4>
                             <h4>Wind: __M/S</h4>
                             <h4>Humidity: __%</h4>  
                         </li>
                         <li class="card">
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" style="position: relative; left: 130px" alt="weather-icon">
+                            <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-icon">
                             <h3>( ____ )</h3>
                             <h4>Temp: __℃</h4>
                             <h4>Wind: __M/S</h4>
