--- a/weather.html
+++ b/weather.html
@@ -7,9 +7,16 @@
         <link rel="stylesheet" href="./assets/css/weather.css">
     </head>
     <body>
-        <h1>Weather</h1>
+        <h1>.</h1>
+        <style>
+            h1 {
+                background: url(./assets/img/weather\ background.jpg);
+                background-size: 200px;
+            }
+        </style>
         <div class="container">
             <div class="weather-input">
+                <h5>Weather Forecast</h5>
                 <h3>Enter a City Name</h3>
                 <input class="city-input" type="text" placeholder="...">
                 <button class="search-btn">Search</button>
